# Taylor_dispersion_arbitrary_changing_shapes

./: .gitignore  README.md  pyproject.toml
dumbell_geo_short_quarter_re0.1/: Allrun
dumbell_geo_short_quarter_re0.1/0/: U
dumbell_geo_short_quarter_re0.1/constant/: momentumTransport  physicalProperties
dumbell_geo_short_quarter_re0.1/constant/triSurface/: dumbell_inlet.stl  dumbell_long_interior.stl
dumbell_geo_short_quarter_re0.1/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
dumbell_geo_short_quarter_re1/: Allrun  visualization_files.pvsm
dumbell_geo_short_quarter_re1/0/: p
dumbell_geo_short_quarter_re1/constant/: physicalProperties
dumbell_geo_short_quarter_re1/constant/triSurface/: dumbell_short_interior.stl
dumbell_geo_short_quarter_re1/system/: blockMeshDict  controlDict  snappyHexMeshDict  surfaceFeaturesDict
notebook/: run_simulations_create_figs.ipynb
taylor_utils/: __init__.py  diffusion_timescale.py  fdm_solver.py  inverse_problem.py  io_utils.py  moments.py  ode_solver.py  openfoam.py  pde_solver.py  rect_psi.py  simulations.py  velocity.py  wall_crossing.py
